--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: davidar
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and export to Docker
@@ -29,6 +29,8 @@ jobs:
       -
         name: Test
         run: |
+          pwd
+          ls -lh
           docker run --rm \
             -v $PWD/test-cc:/tmp/test-cc \
             -v $PWD/lib/toybox:/tmp/lib/toybox \
