--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,25 @@
 -include ../config.mak
 
+ARCH=$(shell uname -m)
+
 SHSRCS=	bltin/printf.c bltin/test.c bltin/times.c \
 	alias.c arith_yacc.c arith_yylex.c cd.c error.c eval.c \
 	exec.c expand.c \
 	input.c jobs.c mail.c main.c memalloc.c miscbltin.c \
 	mystring.c options.c output.c parser.c redir.c show.c \
 	signames.c trap.c var.c \
-	toybox.c tcc.c ar.c
+	toybox.c tcc.c
+
+ifeq ($(ARCH),x86_64)
+SHSRCS+= ar.c
+CFLAGS+= '-DCONFIG_TRIPLET="x86_64-linux-gnu"' -DTCC_TARGET_X86_64
+else ifeq ($(ARCH),i686)
+SHSRCS+= tinyar.c
+CFLAGS+= '-DCONFIG_TRIPLET="i386-linux-gnu"' -DTCC_TARGET_I386
+else
+$(error Unsupported architecture $(ARCH))
+endif
+
 GENSRCS= builtins.c nodes.c syntax.c init.c
 GENHDRS= builtins.h nodes.h syntax.h token.h token_vars.h
 SRCS= ${SHSRCS} ${GENSRCS} ${GENHDRS}
@@ -14,8 +27,7 @@ OBJS= ${SRCS:.c=.o}
 STATIC_LIBS= ../lib/toybox/libtoybox.a ../lib/tcc/libtcc.a
 
 CFLAGS+= -DHAVE_CONFIG_H -I. -I.. -include config.h -DBSD=1 -DSHELL -DDEBUG=1 -Wall
-CFLAGS+= '-DCONFIG_TRIPLET="x86_64-linux-gnu"' -DTCC_TARGET_X86_64 -DONE_SOURCE=0
-CFLAGS+= -DCONFIG_TCC_BCHECK=0 -DCONFIG_TCC_BACKTRACE=0
+CFLAGS+= -DCONFIG_TCC_BCHECK=0 -DCONFIG_TCC_BACKTRACE=0 -DONE_SOURCE=0
 CFLAGS+= -D_LARGEFILE64_SOURCE
 
 all: ash
