Fix stack overflow in rt

--- a/lib/tcc/lib/Makefile
+++ b/lib/tcc/lib/Makefile
@@ -14,7 +14,7 @@ XCC = $(XTCC)
 XAR = $(AR)
 XFLAGS-unx = -B$(TOPSRC)
 XFLAGS-win = -B$(TOPSRC)/win32 -I$(TOPSRC)/include
-XFLAGS = $(XFLAGS$(XCFG)) -I$(TOP)
+XFLAGS = $(XFLAGS$(XCFG)) -I$(TOP) -D__SOFT_FP__
 BFLAGS = -bt
 XCFG = $(or $(findstring -win,$T),-unx)
 S = $(if $(findstring yes,$(SILENT)),@$(info * $@))
