--- a/Makefile.docker
+++ b/Makefile.docker
@@ -1,28 +1,30 @@
 IMAGE_NAME = davidar/bootsh
-GET_DOCKER_IMAGE_ID = docker images --format "{{.ID}}" --no-trunc --filter=reference=$(IMAGE_NAME)
+DOCKER_MOUNTS = \
+	-v $(CURDIR)/test-cc:/tmp/test-cc \
+	-v $(CURDIR)/lib/toybox:/tmp/lib/toybox \
+	-v $(CURDIR)/tarballs:/src/tarballs
 
-test: test-latest test-stage0 test-stage1 test-bootstrap
+test: test-latest test-stage0 test-stage1 test-stage2 bootstrap-amd64 bootstrap-i386
 
 docker-%:
-	docker build . -t $(IMAGE_NAME):$* --build-arg TAG=$* --platform linux/i386
+	docker build . -t $(IMAGE_NAME):$* --build-arg TAG=$* --platform linux/amd64,linux/i386
 
 docker-stage0: docker-latest
 docker-stage1: docker-stage0
 docker-stage2: docker-stage1
 
-docker-bootstrap: docker-stage2
-	[ `$(GET_DOCKER_IMAGE_ID):stage1` = `$(GET_DOCKER_IMAGE_ID):stage2` ]
-	docker tag $(IMAGE_NAME):stage2 $(IMAGE_NAME):bootstrap
-
 test-%: docker-%
-	docker run --rm \
-		-v $(CURDIR)/test-cc:/tmp/test-cc \
-		-v $(CURDIR)/lib/toybox:/tmp/lib/toybox \
-		-v $(CURDIR)/tarballs:/src/tarballs \
-		$(IMAGE_NAME):$* test-host
+	docker run --rm --platform linux/amd64 $(DOCKER_MOUNTS) $(IMAGE_NAME):$* test-host
+	docker run --rm --platform linux/i386 $(DOCKER_MOUNTS) $(IMAGE_NAME):$* test-host
 
 run: docker-latest
 	docker run --rm -it -v $(CURDIR):/src $(IMAGE_NAME):latest
 
-bootsh.%: docker-%
-	ID=`docker create $(IMAGE_NAME):$*` && docker cp $$ID:/bin/sh $@ && docker rm $$ID
+bootsh.amd64.%: docker-%
+	ID=`docker create --platform linux/amd64 $(IMAGE_NAME):$*` && docker cp $$ID:/bin/sh $@ && docker rm $$ID
+
+bootsh.i386.%: docker-%
+	ID=`docker create --platform linux/i386 $(IMAGE_NAME):$*` && docker cp $$ID:/bin/sh $@ && docker rm $$ID
+
+bootstrap-%: bootsh.%.stage1 bootsh.%.stage2
+	diff -q $^
