Move syscalls into libtcc1.a

--- a/lib/tcc/lib/Makefile
+++ b/lib/tcc/lib/Makefile
@@ -48,8 +48,8 @@ DSO_O = dsohandle.o
 RT_C := $(wildcard rt/*.c)
 RT_O := $(patsubst rt/%.c,rt/%.o,$(RT_C))
 
-I386_O = $(RT_O) alloca.o alloca-bt.o stdatomic.o atomic.o builtin.o $(BT_O)
-X86_64_O = $(RT_O) lib-x86_64.o alloca.o alloca-bt.o stdatomic.o atomic.o builtin.o $(BT_O)
+I386_O = $(RT_O) syscall-i386.o alloca.o alloca-bt.o stdatomic.o atomic.o builtin.o $(BT_O)
+X86_64_O = $(RT_O) syscall-x86_64.o lib-x86_64.o alloca.o alloca-bt.o stdatomic.o atomic.o builtin.o $(BT_O)
 ARM_O = $(RT_O) armeabi.o alloca.o armflush.o stdatomic.o atomic.o builtin.o $(BT_O)
 ARM64_O = lib-arm64.o stdatomic.o atomic.o builtin.o $(BT_O)
 RISCV64_O = lib-arm64.o stdatomic.o atomic.o builtin.o $(BT_O)
