--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,11 +9,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Set up Docker
+        uses: crazy-max/ghaction-setup-docker@v3
+        with:
+          daemon-config: |
+            {
+              "debug": true,
+              "features": {
+                "containerd-snapshotter": true
+              }
+            }
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      -
+        name: Set up containerd
+        uses: crazy-max/ghaction-setup-containerd@v3
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
