--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4
       -
         name: Test
-        run: ./build-docker.sh --test
+        run: scripts/build-docker.sh --test
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
